--- a/index.html
+++ b/index.html
@@ -18,23 +18,27 @@
     <header class="page-header">
       <div class="container container--header">
         <!-- SITE NAVIGATION -->
-        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-          <svg
-            width="24"
-            height="24"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-              clip-rule="evenodd"
-            ></path>
-          </svg>
-        </button>
         <nav class="nav">
           <a class="logo" href="index.html">web<span class="logo--dark">Studio</span></a>
+          <button
+            class="menu-mobile__button js-open-menu"
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                clip-rule="evenodd"
+              ></path>
+            </svg>
+          </button>
           <ul class="nav__list nav__list--start">
             <li><a class="nav__highlight active-site" href="index.html">Agencja</a></li>
             <li><a class="nav__highlight" href="portfolio.html">Portfolio</a></li>
@@ -450,7 +454,7 @@
     <script src="./js/modal.js"></script>
     <!-- MENU MOBILE -->
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
+      <button class="menu-mobile__butt js-close-menu">
         <svg
           fill="currentColor"
           viewBox="0 0 20 20"
@@ -465,11 +469,18 @@
           ></path>
         </svg>
       </button>
-      <ul class="mobile-menu">
-        <li><a href="" class="link">About</a></li>
-        <li><a href="" class="link">Products</a></li>
-        <li><a href="" class="link">Contacts</a></li>
-        <li><a href="" class="link">Career</a></li>
+      <ul class="menu-mobile__links">
+        <li><a class="menu-mobile__link" href="index.html">Agencja</a></li>
+        <li><a class="menu-mobile__link" href="portfolio.html">Portfolio</a></li>
+        <li><a class="menu-mobile__link" href="#">Kontakt</a></li>
+      </ul>
+      <ul class="">
+        <li class="menu-mobile__contact">
+          <a class="" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+        </li>
+        <li class="">
+          <a class="mobile-menu__contact" href="tel:+48111111111"> +48 111 111 111</a>
+        </li>
       </ul>
     </div>
     <script
