--- a/index.html
+++ b/index.html
@@ -140,7 +140,13 @@
           <ul class="members">
             <li>
               <figure class="member">
-                <img src="images/person1.jpg" alt="guy with glasses" width="270" height="260" />
+                <img
+                  src="images/person1.jpg"
+                  srcset="images/person1@x2.jpg 2x"
+                  alt="guy with glasses"
+                  width="270"
+                  height="260"
+                />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">Product Designer</p>
@@ -171,7 +177,13 @@
             </li>
             <li>
               <figure class="member">
-                <img src="images/person2.jpg" alt="gal with glasses" width="270" height="260" />
+                <img
+                  src="images/person2.jpg"
+                  srcset="images/person2@x2.jpg 2x"
+                  alt="gal with glasses"
+                  width="270"
+                  height="260"
+                />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">Frontend Developer</p>
@@ -202,7 +214,13 @@
             </li>
             <li>
               <figure class="member">
-                <img src="images/person3.jpg" alt="guy without glasses" width="270" height="260" />
+                <img
+                  src="images/person3.jpg"
+                  srcset="images/person3@x2.jpg 2x"
+                  alt="guy without glasses"
+                  width="270"
+                  height="260"
+                />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">Marketing</p>
@@ -233,7 +251,13 @@
             </li>
             <li>
               <figure class="member">
-                <img src="images/person4.jpg" alt="close up of John Doe" width="270" height="260" />
+                <img
+                  src="images/person4.jpg"
+                  srcset="images/person4@x2.jpg 2x"
+                  alt="close up of John Doe"
+                  width="270"
+                  height="260"
+                />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">UI Designer</p>
