--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <ul class="members">
             <li>
               <figure class="member">
-                <img src="images/person1.jpg" alt="guy with glasses" width="270" height="260" />
+                <img class="member__img" src="images/person1.jpg" alt="guy with glasses" />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">Product Designer</p>
@@ -171,7 +171,7 @@
             </li>
             <li>
               <figure class="member">
-                <img src="images/person2.jpg" alt="gal with glasses" width="270" height="260" />
+                <img class="member__img" src="images/person2.jpg" alt="gal with glasses" />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">Frontend Developer</p>
@@ -202,7 +202,7 @@
             </li>
             <li>
               <figure class="member">
-                <img src="images/person3.jpg" alt="guy without glasses" width="270" height="260" />
+                <img class="member__img" src="images/person3.jpg" alt="guy without glasses" />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">Marketing</p>
@@ -233,7 +233,7 @@
             </li>
             <li>
               <figure class="member">
-                <img src="images/person4.jpg" alt="close up of John Doe" width="270" height="260" />
+                <img class="member__img" src="images/person4.jpg" alt="close up of John Doe" />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
                   <p class="member__job">UI Designer</p>
@@ -347,7 +347,7 @@
         </div>
         <!-- NEWSLETTER-->
         <form class="newsletter">
-          <label for="newsletter-email" class="container__title-s container__title-s--light"
+          <label for="newsletter-email" class="container__title-s container__title-s--footer"
             >Zapisz się do newslettera</label
           >
           <label class="newsletter__email"
@@ -374,8 +374,8 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <h3 class="modal__title">Zostaw swoje dane w formularzu poniżej</h3>
         <form class="form">
+          <h3 class="modal__title">Zostaw swoje dane w formularzu poniżej</h3>
           <label class="input input__label" for="name"
             >Imie
             <div class="input__look input__look--text">
