--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
             <li>
               <figure class="member">
                 <img
+                  class="member_img"
                   src="images/person1.jpg"
                   srcset="images/person1@x2.jpg 2x"
                   alt="guy with glasses"
-                  width="270"
-                  height="260"
+                  width="270px"
+                  height="250px"
                 />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
@@ -181,8 +182,8 @@
                   src="images/person2.jpg"
                   srcset="images/person2@x2.jpg 2x"
                   alt="gal with glasses"
-                  width="270"
-                  height="260"
+                  width="270px"
+                  height="250px"
                 />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
@@ -218,8 +219,8 @@
                   src="images/person3.jpg"
                   srcset="images/person3@x2.jpg 2x"
                   alt="guy without glasses"
-                  width="270"
-                  height="260"
+                  width="270px"
+                  height="250px"
                 />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
@@ -255,8 +256,8 @@
                   src="images/person4.jpg"
                   srcset="images/person4@x2.jpg 2x"
                   alt="close up of John Doe"
-                  width="270"
-                  height="260"
+                  width="270px"
+                  height="250px"
                 />
                 <figcaption class="member__caption">
                   <h3 class="member__name">John Doe</h3>
