--- a/portfolio.html
+++ b/portfolio.html
@@ -79,6 +79,7 @@
                   <img
                     class="card__img"
                     src="images/port1.jpg"
+                    srcset="images/port1@x2.jpg 2x"
                     alt="laptop screen"
                     width="450"
                     height="294"
@@ -101,6 +102,7 @@
                   <img
                     class="card__img"
                     src="images/port2.jpg"
+                    srcset="images/port2@x2.jpg 2x"
                     alt="basketball players"
                     width="450"
                     height="294"
@@ -123,6 +125,7 @@
                   <img
                     class="card__img"
                     src="images/port3.jpg"
+                    srcset="images/port3@x2.jpg 2x"
                     alt="restaurant logo"
                     width="450"
                     height="294"
@@ -145,6 +148,7 @@
                   <img
                     class="card__img"
                     src="images/port4.jpg"
+                    srcset="images/port4@x2.jpg 2x"
                     alt="headphones"
                     width="450"
                     height="294"
@@ -167,6 +171,7 @@
                   <img
                     class="card__img"
                     src="images/port5.jpg"
+                    srcset="images/port5@x2.jpg 2x"
                     alt="two boxes"
                     width="450"
                     height="294"
@@ -189,6 +194,7 @@
                   <img
                     class="card__img"
                     src="images/port6.jpg"
+                    srcset="images/port6@x2.jpg 2x"
                     alt="pc screen"
                     width="450"
                     height="294"
@@ -211,6 +217,7 @@
                   <img
                     class="card__img"
                     src="images/port7.jpg"
+                    srcset="images/port7@x2.jpg 2x"
                     alt="opened magazine"
                     width="450"
                     height="294"
@@ -233,6 +240,7 @@
                   <img
                     class="card__img"
                     src="images/port8.jpg"
+                    srcset="images/port8@x2.jpg 2x"
                     alt="pendant"
                     width="450"
                     height="294"
@@ -255,6 +263,7 @@
                   <img
                     class="card__img"
                     src="images/port9.jpg"
+                    srcset="images/port9@x2.jpg 2x"
                     alt="writing on computer"
                     width="450"
                     height="294"
