--- a/index.html
+++ b/index.html
@@ -477,14 +477,14 @@
         </svg>
       </button>
       <ul class="menu-mobile__links">
-        <li class="menu-mobile__link menu-mobile__link--active link--gap">
+        <li class="menu-mobile__link menu-mobile__link--active menu-mobile__link--gap">
           <a href="index.html">Agencja</a>
         </li>
         <li class="menu-mobile__link link--gap">
           <a href="portfolio.html">Portfolio</a>
         </li>
         <li class="menu-mobile__link"><a href="#">Kontakt</a></li>
-        <li class="tel-gap">
+        <li class="menu-mobile__tel--gap">
           <a class="menu-mobile__tel" href="tel:+48111111111">+48 111 111 111</a>
         </li>
         <li>
